# odyssey

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  finetune.py  finetune_bigbird.py  interpret.py  pretrain.py  pretrain_bigbird.py  pyproject.toml  requirements.txt  results.md  slurm_scripts.md
.github/workflows/: code_checks.yml
article/: index.html
data/: collect.py  sequence.py
data/bigbird_data/: DataChecker.ipynb
data_import/: load_ndjson_to_postgres.py
evaluation/: AttentionVisualization.ipynb  CompareAUROC-Poster.ipynb  TestAnalysis.ipynb
lib/: data.py  prediction.py  tokenizer.py  utils.py
models/: __init__.py
models/baseline/: Bi-LSTM.ipynb  Bi-LSTM.py  Bi-LSTM2.ipynb  XGBoost.ipynb
models/big_bird_cehr/: data.py  embeddings.py  model.py  playground.ipynb  pretrain.py  tokenizer.ipynb  tokenizer.py
models/cehr_bert/: data.py  embeddings.py  model.py  tokenizer.py
models/configs/: cehr_bigbird.yaml
models/exbehrt/: model_bigbird.py  playground.ipynb
odyssey/: __init__.py
odyssey/data/: DataProcessor.ipynb  __init__.py  constants.py  dataset.py  processor.py  sequence.py  tokenizer.py
odyssey/data/bigbird_data/: DataChecker.ipynb  DataProcessor.ipynb
odyssey/data/mimiciv/: __init__.py  collect.py
odyssey/data/seq/: __init__.py  _data_containers.py  _encounters.py  _events.py  _labels.py  _tokens.py  generator.py
odyssey/evals/: AttentionVisualization.ipynb  CompareAUROC-Poster.ipynb  TestAnalysis.ipynb  __init__.py  evaluation.py  prediction.py
odyssey/interp/: AttentionVisualization.ipynb  __init__.py  attribution.py  grad_attribution.ipynb  grad_attribution.py  utils.py
odyssey/models/: __init__.py  embeddings.py  model_utils.py  prediction.py  utils.py
odyssey/models/baseline/: Bi-LSTM.ipynb  Bi-LSTM.py  XGBoost.ipynb
odyssey/models/cehr_bert/: __init__.py  model.py
odyssey/models/cehr_big_bird/: __init__.py  embeddings.py  model.py  playground.ipynb  tokenizer.ipynb
odyssey/models/cehr_mamba/: __init__.py  mamba-dev.ipynb  mamba_utils.py  model.py  playground.ipynb  pretrain.ipynb
odyssey/models/configs/: cehr_bert.yaml  cehr_bigbird.yaml  cehr_mamba.yaml  cehr_multibird.yaml  ehr_mamba.yaml  ehr_mamba2.yaml  ehr_mamba3.yaml
odyssey/models/ehr_mamba/: __init__.py  mamba-dev.ipynb  mamba_utils.py  model.py
odyssey/models/ehr_mamba2/: __init__.py  model.py
odyssey/models/ehr_mamba3/: __init__.py  model.py
odyssey/utils/: __init__.py  utils.py
scripts/meds/: extract_mimic_iv.py  meds_to_odyssey.py  pipeline.yaml  run_pipeline.sh
tests/data/: test_collect.py
tests/odyssey/: __init__.py
tests/odyssey/data/: test_dataset.py
tests/odyssey/data/mimiciv/: test_collect.py
tests/odyssey/utils/: test_log.py
